--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>서강 스포트랑트 1화</title>
+    <title>서강 스포트라이트 1화</title>
   </head>
   <body>
   	<p>sdsd</p>
-    <img src=""/>
+    <img src="/image/1.png" style="width:width;">
   </body>
 </html>
