--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
   	<p>sdsd</p>
-    <img src="/image/1.png" style="margin:auto; width:100%; max-width:600px;">
+    <img src="/image/1.png" style="display:block; margin-left:auto; margin-right:auto; width:100%; max-width:600px;">
   </body>
 </html>
