--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
   <head>
     <meta charset="utf-8">
     <title>서강 스포트라이트 1화</title>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-105692448-1', 'auto');
+      ga('send', 'pageview');
+    </script>
   </head>
   <body>
     <img src="/image/1.png" style="display:block; margin-left:auto; margin-right:auto; width:100%; max-width:600px;">
