--- a/index.html
+++ b/index.html
@@ -13,8 +13,34 @@
       ga('create', 'UA-105692448-1', 'auto');
       ga('send', 'pageview');
     </script>
+    <style>
+      img {
+        display:block; 
+        margin-left:auto; 
+        margin-right:auto; 
+        margin-bottom:20px;
+        width:100%; 
+        max-width:600px;
+      }
+    </style>
   </head>
   <body>
-    <img src="/image/1.png" style="display:block; margin-left:auto; margin-right:auto; width:100%; max-width:600px;">
+    <img src="image/01.png">
+    <img src="image/02.png">
+    <img src="image/03.png">
+    <img src="image/04.png">
+    <img src="image/05.png">
+    <img src="image/06.png">
+    <img src="image/07.png">
+    <img src="image/08.png">
+    <img src="image/09.png">
+    <img src="image/010.png">
+    <img src="image/011.png">
+    <img src="image/012.png">
+    <img src="image/013.png">
+    <img src="image/014.png">
+    <img src="image/015.png">
+    <img src="image/016.png">
+    <img src="image/017.png">
   </body>
 </html>
