--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </style>
   </head>
   <body>
-    <img src="image/00.png">
+    <img src="image/title.png">
     <img src="image/01.png">
     <img src="image/02.png">
     <img src="image/03.png">
