--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="utf-8">
     <title>서강 스포트라이트 1화</title>
+    <meta property="og:title" content="서강 스포트라이트 1화" />
+    <meta property="og:image" content="image/title.png" />
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
