--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>서강 스포트라이트 1화</title>
     <meta property="og:title" content="서강 스포트라이트 1화" />
+    <meta property="og:description" content="학교가 가난한건 다 이유가 있었다..." />
     <meta property="og:image" content="image/title.png" />
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
