--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
     </style>
   </head>
   <body>
+
+<div align="center">
+  <a href="http://www.simplehitcounter.com" target="_blank">
+    <img src="http://simplehitcounter.com/hit.php?uid=2296092&f=16777215&b=0" border="0" height="18" width="83" alt="web counter">
+  </a>
+  <br>
+  <a href="http://www.simplehitcounter.com" target="_blank" style="text-decoration:none;">web counter</a></div>
     <img src="image/title.png">
     <img src="image/01.png">
     <img src="image/02.png">
