--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       ga('send', 'pageview');
     </script>
     <style>
-      img {
+      img.toon {
         display:block; 
         margin-left:auto; 
         margin-right:auto; 
@@ -35,23 +35,23 @@
   </a>
   <br>
   <a href="http://www.simplehitcounter.com" target="_blank" style="text-decoration:none;">web counter</a></div>
-    <img src="image/title.png">
-    <img src="image/01.png">
-    <img src="image/02.png">
-    <img src="image/03.png">
-    <img src="image/04.png">
-    <img src="image/05.png">
-    <img src="image/06.png">
-    <img src="image/07.png">
-    <img src="image/08.png">
-    <img src="image/09.png">
-    <img src="image/010.png">
-    <img src="image/011.png">
-    <img src="image/012.png">
-    <img src="image/013.png">
-    <img src="image/014.png">
-    <img src="image/015.png">
-    <img src="image/016.png">
-    <img src="image/017.png">
+    <img class="toon" src="image/title.png">
+    <img class="toon" src="image/01.png">
+    <img class="toon" src="image/02.png">
+    <img class="toon" src="image/03.png">
+    <img class="toon" src="image/04.png">
+    <img class="toon" src="image/05.png">
+    <img class="toon" src="image/06.png">
+    <img class="toon" src="image/07.png">
+    <img class="toon" src="image/08.png">
+    <img class="toon" src="image/09.png">
+    <img class="toon" src="image/010.png">
+    <img class="toon" src="image/011.png">
+    <img class="toon" src="image/012.png">
+    <img class="toon" src="image/013.png">
+    <img class="toon" src="image/014.png">
+    <img class="toon" src="image/015.png">
+    <img class="toon" src="image/016.png">
+    <img class="toon" src="image/017.png">
   </body>
 </html>
