--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
   </head>
   <body>
     <div align="center">
-      지금까지 이 만큼 조회됨
+      지금까지 
       <a href="http://www.simplehitcounter.com" target="_blank">
-        <img src="http://simplehitcounter.com/hit.php?uid=2296092&f=16777215&b=0" border="0" height="18" width="83" alt="web counter">
+        <img src="http://simplehitcounter.com/hit.php?uid=2296092&f=16777215&b=0" border="0" height="25" width="100" alt="web counter">
       </a>
+      명이 이 만화를 봤습니다.
       <br>
       <!--
       <a href="http://www.simplehitcounter.com" target="_blank" style="text-decoration:none;">
