--- a/index.html
+++ b/index.html
@@ -25,12 +25,16 @@
         width:100%; 
         max-width:900px;
       }
+      a.count{
+        font-size: 25px;
+        text-decoration: none;
+      }
     </style>
   </head>
   <body>
     <img class="toon" src="image/title.png">
     <div align="center">
-      <a href="http://www.simplehitcounter.com" target="_blank">
+      <a class="count" href="http://www.simplehitcounter.com" target="_blank">
         지금까지
         <img src="http://simplehitcounter.com/hit.php?uid=2296092&f=16777215&b=0" border="0" height="25" width="100" alt="web counter">
         명이 이 만화를 봤습니다.
