--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         max-width:900px;
       }
       a.count{
+        margin: 0 0 20px 0;
+        color: black;
         font-size: 25px;
         text-decoration: none;
       }
