--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div align="center">
       <a class="count" href="http://www.simplehitcounter.com" target="_blank">
         지금까지
-        <img src="http://simplehitcounter.com/hit.php?uid=2296092&f=16777215&b=0" border="0" height="25" width="100" alt="web counter">
+        <img src="http://simplehitcounter.com/hit.php?uid=2296093&f=0&b=16777215" border="0" height="25" width="100" alt="web counter">
         명이 봤음
       </a>
       <br>
