--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         max-width:900px;
       }
       a.count{
-        margin: 0 0 20px 0;
+        margin-bottom:20px;
         color: black;
         font-size: 25px;
         text-decoration: none;
