--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         max-width:900px;
       }
       a.count{
-        margin-bottom:20px;
+        padding-bottom:20px;
         color: black;
         font-size: 25px;
         text-decoration: none;
@@ -36,7 +36,7 @@
   <body>
     <img class="toon" src="image/title.png">
     <div align="center">
-      <a class="count" href="http://www.simplehitcounter.com" target="_blank">
+      <a class="count" href="" target="_blank">
         지금까지
         <img src="http://simplehitcounter.com/hit.php?uid=2296093&f=0&b=16777215" border="0" height="25" width="100" alt="web counter">
         명이 봤음
