--- a/index.html
+++ b/index.html
@@ -25,20 +25,22 @@
         width:100%; 
         max-width:900px;
       }
-      a.count{
-        padding-bottom:20px;
-        color: black;
-        font-size: 25px;
-        text-decoration: none;
+      div.count{
+        magin-bottom:20px;
+        a{
+          color: black;
+          font-size: 50px;
+          text-decoration: none;
+        }
       }
     </style>
   </head>
   <body>
     <img class="toon" src="image/title.png">
-    <div align="center">
-      <a class="count" href="" target="_blank">
+    <div align="center" class="count">
+      <a href="" target="_blank">
         지금까지
-        <img src="http://simplehitcounter.com/hit.php?uid=2296093&f=0&b=16777215" border="0" height="25" width="100" alt="web counter">
+        <img src="http://simplehitcounter.com/hit.php?uid=2296093&f=0&b=16777215" border="0" height="50" width="200" alt="web counter">
         명이 봤음
       </a>
       <br>
