--- a/index.html
+++ b/index.html
@@ -67,5 +67,26 @@
     <img class="toon" src="image/015.png">
     <img class="toon" src="image/016.png">
     <img class="toon" src="image/017.png">
+     <div>
+      PS. 총장님, 예수회 재단 경영권 남용에 대한 진실을 요구합니다.
+
+      작년 남양주 캠퍼스 사건에 이어 올해 또 한 번, 예수회 재단이 경영권을 남용한 사실을 고발합니다. 총장님, 언제까지 학생사회로부터 진실을 숨길 수 있을 거라 생각하십니까.
+
+      지난 3월, 서강대는 개교 이래 첫 외부특별감사를 실시했습니다. 이 사실은 2017학년도 1차 이사회 기록에 명시돼있습니다. 모두에게 공개된 이사회 기록, 그동안 아무도 관심을 갖고 살펴본 적이 없던 것입니다.
+
+      저희 서강대 학생 몇 명은 이사회 회의록을 보던 중 회의록에 명시된 외부특별감사 내용에 의문을 갖게 됐습니다. 여러 관계자들을 만나보니 학교 측에서 이 문제로 법적 조치까지 준비하는 중인 것으로 파악했습니다.
+
+      지난 5월 19일 열린 1차 이사회 회의록을 보면, 이사회는 <외부 특별감사 결과 후속 조치 시행을 위한 요청의 건>을 논의했습니다. 5월 종료된 특별감사에 따른 후속 조치 시행이 이사회 7인 전원일치로 보류됐습니다. 보고 내용의 사실 확인과 보완이 필요하다는 이유에서였습니다. 그런데 이유가 석연치 않습니다. 후속 조치 대상 중 한 명이 바로 예수회 재단의 이사이기 때문입니다.
+
+      이날 이사회에 참석한 이사는 총 12명 중 8명입니다. 이사 7인으로 표결된 후속 조치 안건 논의에 한 명이 빠졌다는 얘기입니다. 이와 관련해 이사회 기록은 '자구수정'을 남겼는데, 그 내용은 "안건 논의 중 OOO 이사 퇴장으로 7인이 의결했고, 이후 OOO 이사 재입장"했다는 것입니다. 논의되는 안건에 이사가 이해관계에 있으면 해당 안건 표결에 참여할 수 없다는 것은 사립학교법상 원칙입니다. OOO 이사가 외부 특별감사 대상이라는 해석이 나오는 대목입니다.
+
+      저희는 특별감사 사안에 대해 아는 복수의 관계자들을 만나 얘기를 나눴습니다. 모두 "특감에 관해 알려줄 수 없다"며 말을 아꼈습니다. 학교 측은 후속조치가 이행 될 때까지 학생들은 나서지 않았으면 좋겠다는 입장입니다.
+
+      그런데 후속조치는 현재 무기한 연기된 상태입니다. OOO 이사를 포함한 당사자들이 직원 징계위원회에 회부되지도 않았습니다. 학교 측 한 관계자는 “법률 검토 후 고발이 있을 예정”이라고 밝혔지만 그게 정확히 언제인지는 본인도 알 수 없다고 합니다.
+
+      저희는 학교 징계 위험을 무릅쓰고 이 문제에 대해 더 알아봤습니다. OOO 이사가 지인에게 학교 자회사를 헐값에 매각했다는 정황이 특별 감사 내용에 포함됐다는 것을 확인했습니다. 학교 측은 OOO 이사를 고발하십시오. 그래야지만 검찰수사를 통해 감사에서 확인하지 못한 것을 낱낱이 밝혀낼 수 있습니다.
+
+      서강스포트라이트는 재단과 학생사회를 적대적 관계로 만들 의도는 없습니다. 다만 잘못이 있다면 그에 따른 마땅한 조치가 있는 것이 상식이라는 생각, 그리고 서강대 재단이 남양주 캠퍼스 사건을 비롯한 여러 논란 끝에 이제는 더 나은 방향으로 가야 한다는 생각입니다. 앞으로 저희는 학생으로서 이번 문제의 진실이 드러날 때까지 저희 나름의 역할을 하겠습니다.
+    </div>
   </body>
 </html>
